feat: logica para el panel de documentos adjuntos desarrollo comisión integrada
